--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,3 @@
-/* GLOBAL ROUTE START */
 :root {
     --font-color: #ffffff;
     --font-second-color: #c4c4c4;
@@ -41,7 +40,7 @@ body {
     background-color: black;
     transition: 1s all;
 }
-/* GLOBAL END */
+/* ------ GLOBAL START ------ */
 
 /* FONTS START */
 * {
@@ -441,11 +440,6 @@ body {
     z-index: -1;
 }
 
-#footer-scale {
-    width: 82%;
-    transition: 0.5s all;
-}
-
 .footer .footer-wrapper {
     display: flex;
     justify-content: space-between;
@@ -499,7 +493,7 @@ body {
     font-weight: 100;
 }
 /* FOOTER END */
-/* ------ GLOBAL ROUTE END ------ */
+/* ------ GLOBAL END ------ */
 
 /* ------ LOGIN ROUTE START ------ */
 .login .login-background {
@@ -1638,14 +1632,6 @@ body {
     transition: 1s all;
     z-index: 20;
 }
-/* 
-.authors-scale {
-    border: 1px solid var(--border-color);
-    transform: scale(0.9);
-    -ms-transform: scale(0.9);
-    -webkit-transform: scale(0.9);
-    transition: 1.5s all;
-} */
 
 .authors-section .title-heading-wrapper {
     position: relative;
@@ -1744,22 +1730,6 @@ body {
     margin-bottom: 400px;
     transition: 1s all;
 }
-/* 
-.contact-scale {
-    border: 1px solid var(--border-color);
-    transform: scale(0.9);
-    -ms-transform: scale(0.9);
-    -webkit-transform: scale(0.9);
-    transition: 1.5s all;
-    top: -50px;
-}
-
-.contact-normal {
-    transform: scale(1);
-    -ms-transform: scale(1);
-    -webkit-transform: scale(1);
-    transition: 1s all;
-} */
 
 .contact-section .title-heading-wrapper {
     position: relative;
@@ -2201,28 +2171,9 @@ body {
 /* ANIMATIONS END */
 
 /* RESPONSIVE START */
-/* Small devices (tablets, 768px and up) */
-@media (max-width: 768px) {
-
-    .reading-section .reading-wrapper {
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .reading-banner .reading-img {
-        left: 0;
-        margin: 0;
-        width: 380px;
-    }
-    
-    .reading-wrapper .reading-text {
-        display: none;
-    }
-}
-
+/* Small devices (mobile, 700px and down) */
 @media (max-width: 700px) {
     /* ------ HOME ROUTE START ------ */
-
     /* TUTORIAL START */
     .tutorial-video .tablet-frame {
         top: 10px;
@@ -2264,28 +2215,49 @@ body {
     .reading-section .moving-text {
         font-size: 50px;
     }
-
     /* READING END */
-
     /* ------ HOME ROUTE END ------ */
 }
 
-@media (max-width: 910px) {
-    /* READING START */
-    /* .reading-wrapper .reading-banner {
-        width: 48%;
-        top: 0;
-        left: -50px;
-    } */
+/* Small devices (tablets, 768px and down) */
+@media (max-width: 768px) {
+    /* ------ GLOBAL START ------ */
+    /* FOOTER START */
+    /* FOOTER END */
+    /* ------ GLOBAL END ------ */
 
-   
+    /* ------ HOME ROUTE START ------ */
+    /* READING START */
+    .reading-section .reading-wrapper {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .reading-banner .reading-img {
+        left: 0;
+        margin: 0;
+        width: 380px;
+    }
+
+    .reading-wrapper .reading-text {
+        display: none;
+    }
     /* READING END */
 
+    /* CONTACT START */
+    .contact-section {
+        margin-bottom: 800px;
+    }
+    /* CONTACT END */
+    /* ------ HOME ROUTE END ------ */
+}
+
+/* Medium devices (desktops, 992px and down) */
+@media (max-width: 910px) {
     /* SERVICE START */
     .services-section .services-cards {
         flex-direction: column;
     }
-
     /* SERVICE END */
 
     /* BOOK START */
@@ -2321,7 +2293,6 @@ body {
         width: 380px;
     }
     /* CONTACT END */
-
     /* ------ HOME ROUTE END ------ */
 
     /* ------ ABOUT US ROUTE START ------ */
